2007-09-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shttpd_ext.c: Use new name.

2007-09-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile, init.c, rootfs/.cvsignore: Add some dynamic content.
	Can now look at cpu usage, reset cpu usage and print a stack
	usage report.
	* goahead_index.html, shttpd.png, shttpd_ext.c, shttpd_index.html:
	New files.
	* index.html.in: Removed.

2007-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* init.c: Remove TARFILE_XXX macros.

2007-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Use bin2c to more reliably turn the tarfile into a
	linkable object file. Ignore .cvsignore when making tarfile.
	* init.c: Clean up tarfile symbol definitions.
	* .cvsignore, rootfs/.cvsignore: New files.

2007-08-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Account for -B architecture option.

2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Eliminate unneeded temp.o

2007-07-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* init.c: Account for adding port to shttpd initialization.

2007-07-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog, Makefile, init.c: No switchable from GoAhead to SHTTPD but
	defaults to SHTTPD. The displayed index.html will indicate which
	httpd implementation is enabled. The user should edit the Makefile to
	switch settings.
	* index.html.in: New file.
	* rootfs/index.html: Removed.

2007-07-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile, init.c: No switchable from GoAhead to SHTTPD but defaults
	to SHTTPD. The displayed index.html will indicate which httpd
	implementation is enabled. The user should edit the Makefile to
	switch settings.
	* index.html.in: New file.
	* rootfs/index.html: Removed.

2007-07-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Make slightly smarter on LD arguments.  Do not pick
	up CVS files in tarball.
	* init.c: Turn off tracing on GoAhead.  More debug.
	* rootfs/etc/hosts: Match OAR setup for EP5200.