@@ -2,7 +2,7 @@
 <HEAD><TITLE>RTEMS @SERVER@ Test Page</TITLE></HEAD>
 <BODY BGCOLOR="FFFFFF">
 <center>
-<H1>RTEMS @SERVER@ Test Page</H1>
+<H1>RTEMS GoAhead Test Page</H1>
 <A HREF="http://www.rtems.org">
   <IMG align=center BORDER=0 SRC="rtems_logo.jpg" ALT="RTEMS"> </A>
 
